@@ -13,3 +13,12 @@ Compiling Rivet with cmake:
    cmake -E make_directory build
    cmake -E chdir build cmake --config Release ..
    cmake --build build --target all --config Release --clean-first
+   cmake --build build --target install
+
+3) To install mod_rivet.so/Rivet library to a custom location,
+   the following commands can be used:
+
+   cmake -E chdir build cmake --config Release \
+     -DAPACHE_MODULE_DIR=/home/tcl/rivet/branches/cmake/cmake/test/modules \
+     -DAPACHE_LIB_DIR=/home/tcl/rivet/branches/cmake/cmake/test/ ..
+   cmake --build build --target install
